# posipaka

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets-patterns.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  alembic.ini  config.example.yaml  mcp.example.yaml  plan.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  docker-security.yml  docs.yml  release.yml  sbom.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
deploy/: kubernetes.yaml  posipaka.service
deploy/terraform/: cloud-init.yaml  main.tf  monitoring.tf  terraform.tfvars.example
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: mkdocs.yml
docs/site/: index.md
posipaka/: __init__.py  __main__.py  main.py
posipaka/channels/: base.py  webhook_health.py
posipaka/config/: catalog.py  defaults.py  heartbeat_template.py  profiles.py  runtime_config.py  settings.py
posipaka/core/: agent.py  agent_types.py  approval_gate.py  auto_update.py  batch_processor.py  chaos.py  command_handler.py  complexity.py  cost_guard.py  cost_tracker.py  cron_engine.py  cron_executor.py  cron_history.py  cron_parser.py  degradation.py  documents.py  extension_api.py  feature_flags.py  gateway.py  health.py  heartbeat.py  incident_response.py  json_logging.py  model_router.py  module_registry.py  monetization.py  observability.py  permission_checker.py  platform.py  privacy.py  privacy_manager.py  prompt_builder.py  prompt_compressor.py  quality.py  resilience.py  resource_monitor.py  scheduler.py  semantic_cache.py  session.py  structured_output.py  (+6 more)
posipaka/integrations/: base.py
posipaka/memory/: compaction.py  context_manager.py  embedding_scheduler.py  hybrid_search.py  manager.py  models.py  user_profile.py
posipaka/personas/: manager.py
posipaka/security/: audit.py  container_sandbox.py  filesystem_policy.py  injection.py  owasp_mapping.py  path_traversal.py  permission_matrix.py  permissions.py  rotation.py  sandbox.py  secrets.py  skill_sandbox.py  ssrf.py
posipaka/setup/: __init__.py  wizard.py  wizard_messenger.py  wizard_web.py
posipaka/skills/: loader.py  versioning.py
posipaka/utils/: backup.py  doctor.py  formatting.py  logging.py  logging_setup.py  rate_limiter.py  retry.py  strings.py
posipaka/web/: app.py  auth.py  middleware.py  security_headers.py
scripts/: auto_update.sh  blue_green_deploy.sh  check_forbidden_files.py  check_secrets.py  deploy.sh  install.sh  install_autoupdate.sh  rollback.sh
terraform/: cloud-init.yaml  main.tf  monitoring.tf  outputs.tf  variables.tf  versions.tf
tests/: conftest.py  test_chaos.py  test_integration_extended.py  test_web.py
tests/e2e/: test_full_flow.py
tests/evals/: eval_runner.py  eval_sets.py  test_evals.py
tests/smoke/: test_smoke.py
tests/unit/: test_agent.py  test_architecture.py  test_browser.py  test_cost_guard.py  test_cron_engine.py  test_git_helper.py  test_mcp.py  test_memory.py  (+5 more)
(+121 files in other folders)
