[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "posipaka"
version = "0.1.0"
description = "Posipaka — персональний AI-агент для месенджерів"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Posipaka Team" },
]
keywords = ["ai", "agent", "telegram", "assistant", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LLM
    "anthropic>=0.30,<1.0",
    "openai>=1.35,<2.0",
    # Config
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "pyyaml>=6.0,<7.0",
    # Async
    "anyio>=4.4,<5.0",
    # Logging
    "loguru>=0.7,<1.0",
    # Retry
    "tenacity>=8.3,<10.0",
    # CLI
    "click>=8.1,<9.0",
    "rich>=13.7,<15.0",
    # Web
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1,<4.0",
    # Security
    "cryptography>=42,<44",
    "bcrypt>=4.1,<5.0",
    # Database
    "aiosqlite>=0.20,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    # Scheduler
    "apscheduler>=3.10,<4.0",
    # HTTP client
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
# Upper bounds на всі залежності
telegram = ["python-telegram-bot>=21,<22"]
discord = ["discord.py>=2.3,<3.0"]
slack = ["slack-sdk>=3.27,<4.0", "slack-bolt>=1.18,<2.0"]
whatsapp = ["twilio>=8.5,<10.0"]
google = ["google-api-python-client>=2.130,<3.0", "google-auth-oauthlib>=1.2,<2.0"]
browser = ["playwright>=1.45,<2.0", "beautifulsoup4>=4.12,<5.0"]
github = ["PyGithub>=2.3,<3.0"]
notion = ["notion-client>=2.2,<3.0"]
memory = ["chromadb>=0.5,<1.0", "sentence-transformers>=3.0,<4.0"]
tui = ["textual>=0.52,<1.0"]
voice = ["edge-tts>=6.1,<7.0"]
docs = ["pdfplumber>=0.10,<1.0", "python-docx>=1.1,<2.0", "pandas>=2.2,<3.0"]
monitor = ["psutil>=5.9,<7.0"]
all = [
    "posipaka[telegram,discord,slack,whatsapp,google,browser,github,notion,memory,tui,voice,docs,monitor]",
]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
    "cyclonedx-bom>=4.0,<5.0",
    "pip-audit>=2.7,<3.0",
    "bandit>=1.7,<2.0",
]

[project.scripts]
posipaka = "posipaka.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["posipaka"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["SIM102", "SIM105", "SIM108", "SIM103", "B905", "UP042", "UP036", "UP047"]

[tool.ruff.lint.per-file-ignores]
"posipaka/web/app.py" = ["E501"]
"posipaka/core/*.py" = ["E501"]
"posipaka/setup/*.py" = ["E501", "F841", "F401", "N806"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
